--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,15 @@
 {
-  "version": 2,
+  "version": 3,
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/api/index.ts",
+      "methods": ["GET"]
+    }
+  ],
   "builds": [
     {
-      "src": "api/**/*.ts",
+      "src": "api/index.ts",
       "use": "@vercel/edge"
     }
   ]
