--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,15 +2,11 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "ESNext",
-    "moduleResolution": "node",
     "lib": ["DOM", "ES2020"],
     "strict": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true,
-    "outDir": "dist",
-    "resolveJsonModule": true
+    "skipLibCheck": true
   },
-  "include": ["api/**/*.ts", "data/**/*.ts"],
-  "exclude": ["node_modules"]
+  "include": ["api/**/*.ts", "data/**/*.ts"]
 }
